Cleaned up JS, finalized gameplay, updated objects, traded div class for buttons

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 				
 				<div class="row" id="jewels">
 
-						<div class="col-md-3" id="red"></div>
-						<div class="col-md-3" id="green"></div>
-						<div class="col-md-3" id="blue"></div>
-						<div class="col-md-3" id="gold"></div>
+						<button class="col-md-3 gem-button" id="red"></button>
+						<button class="col-md-3 gem-button" id="green"></button>
+						<button class="col-md-3 gem-button" id="blue"></button>
+						<button class="col-md-3 gem-button" id="gold"></button>
 						
 				</div>
 
