Updated css height for main box

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCtype HTML></!DOCTYPE html>
 <html>
 <head>
-	<title>Jewel Game</title>
+	<title>Gem Guardian</title>
 	<link href="https://fonts.googleapis.com/css?family=Cantarell|Orbitron" rel="stylesheet">
 	 <link rel ="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
